Fixed 'to-clipboard' icons being virtually invisible on some themes - Resolves #53

--- a/piggy/static/css/styles.css
+++ b/piggy/static/css/styles.css
@@ -1334,6 +1334,14 @@ details ul li,
   word-wrap: break-word !important;
 }
 
+.md-clipboard {
+  color: var(--piggy-light) !important;
+}
+
+.md-clipboard:hover {
+  color: var(--piggy-neutral) !important;
+}
+
 /*******************\
 |* ERROR CONTAINER *|
 \*******************/
